--- a/WebApp.Site/src/styles.css
+++ b/WebApp.Site/src/styles.css
@@ -22,3 +22,9 @@
   background-size: cover;
 }
 
+::ng-deep label {
+  font-size: 0.80rem !important;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  position: relative;
+  left: 1px;
+}
