--- a/WebApp.Site/src/app/pages/login/login.component.html
+++ b/WebApp.Site/src/app/pages/login/login.component.html
@@ -4,7 +4,7 @@
   <p-card styleClass="w-20rem h-21rem">
     <div class="flex flex-row justify-content-center mb-5">
       <span class="text-2xl font-bold font-style adjust-position"
-        >Money Control App</span
+        >Money App</span
       >
     </div>
     <form [formGroup]="loginForm" class="flex grid formgrid p-fluid h-14rem">
