--- a/WebApp.Site/src/app/feature-components/menu/menu.component.html
+++ b/WebApp.Site/src/app/feature-components/menu/menu.component.html
@@ -6,7 +6,7 @@
         <p class="ml-1 font-semibold" style="font-size: 14px" *ngIf="user">{{user.name}}</p>
       </div>
 
-      <button class="logout-button" (click)="logout()" [pTooltip]="'Logout'"></button>
+      <button class="logout-button" (click)="logout()" [pTooltip]="'Sair'"></button>
     </div>
     <router-outlet></router-outlet>
   </p-card>
