--- a/WebApp.Site/src/app/feature-components/menu/menu.component.html
+++ b/WebApp.Site/src/app/feature-components/menu/menu.component.html
@@ -1,7 +1,7 @@
 <div class="container flex align-items-center justify-content-center h-screen">
   <p-card id="card-container" class="card-container">
-    <div class="menu-bar px-1 flex flex-row justify-content-between align-items-center bg-gray-300">
-      <div class="flex flex-row align-items-center">
+    <div class="menu-bar px-1 flex flex-row justify-content-between align-items-center bg-gray-700">
+      <div class="flex flex-row align-items-center text-white">
         <i class="pi pi-user " style="font-size: 13px"></i>
         <p class="ml-1 font-semibold" style="font-size: 14px" *ngIf="user">{{user.name}}</p>
       </div>
