--- a/WebApp.Site/src/app/feature-components/table/table.component.html
+++ b/WebApp.Site/src/app/feature-components/table/table.component.html
@@ -8,12 +8,13 @@
     <div class="flex flex-row justify-content-between align-items-center">
       <form [formGroup]="calendarForm">
         <p-calendar
-          styleClass="w-10rem"
+          styleClass="w-15rem"
           formControlName="date"
           view="month"
           dateFormat="mm/yy"
           [readonlyInput]="true"
           [showIcon]="true"
+          (ngModelChange)="emitDate()"
         ></p-calendar>
       </form>
 
@@ -64,7 +65,10 @@
           *ngIf="column.useTag"
           class="px-1 p-0"
         >
-          <p-tag [value]="manipulateValue(registry, column)" styleClass="bg-gray-600"></p-tag>
+          <p-tag
+            [value]="manipulateValue(registry, column)"
+            styleClass="bg-gray-600"
+          ></p-tag>
         </td>
 
         <td *ngIf="last" class="p-0">
@@ -78,6 +82,12 @@
           </div>
         </td>
       </ng-container>
+    </tr>
+  </ng-template>
+
+  <ng-template pTemplate="emptymessage">
+    <tr>
+      <td colspan="7" style="text-align: center;">Não há entradas ou saídas registradas</td>
     </tr>
   </ng-template>
 </p-table>
