--- a/WebApp.Site/src/app/feature-components/table/table.component.html
+++ b/WebApp.Site/src/app/feature-components/table/table.component.html
@@ -87,7 +87,7 @@
 
   <ng-template pTemplate="emptymessage">
     <tr>
-      <td colspan="7" style="text-align: center;">Não há entradas ou saídas registradas</td>
+      <td colspan="7" style="text-align: center;">{{emptyMessage}}</td>
     </tr>
   </ng-template>
 </p-table>
