change img format [ jpeg --> webp ]

--- a/WebApp.Site/src/app/pages/login/login.component.html
+++ b/WebApp.Site/src/app/pages/login/login.component.html
@@ -3,7 +3,7 @@
 >
   <div class="w-20rem h-19rem bg-gray-50 p-3 border-round-lg">
     <div class="flex flex-row justify-content-center mb-5">
-      <h1 class="text-2xl font-bold font-style adjust-position">Money App</h1>
+      <h1 class="text-2xl font-style">Moneyapp</h1>
     </div>
     <form [formGroup]="loginForm" class="flex grid formgrid p-fluid h-14rem">
       <div class="col-12 h-9rem flex flex-column justify-content-around">
