--- a/WebApp.Site/src/app/feature-components/menu/menu.component.css
+++ b/WebApp.Site/src/app/feature-components/menu/menu.component.css
@@ -5,7 +5,7 @@
 ::ng-deep .container {
   width: 100%;
   position: relative;
-  background-image: url("../../../assets/images/background-primary.jpeg");
+  background-image: url("../../../assets/images/background-primary.webp");
   /* background-color: black; */
   background-repeat: no-repeat;
   background-size: cover;
