--- a/WebApp.Site/src/app/feature-components/table/table.component.html
+++ b/WebApp.Site/src/app/feature-components/table/table.component.html
@@ -8,7 +8,7 @@
     <div class="flex flex-row justify-content-between align-items-center">
       <form [formGroup]="calendarForm">
         <p-calendar
-          styleClass="w-13rem"
+          styleClass="w-10rem md:w-13rem h-2rem md:h-3rem"
           formControlName="date"
           view="month"
           dateFormat="mm/yy"
@@ -20,17 +20,19 @@
 
       <div class="flex align-items-center justify-content-end gap-2 p-0">
         <p-button
+          [label]="columns.length != 2 ? 'Despesa' : ''"
           *ngIf="registryCategory != 2"
-          styleClass="h-2rem w-2rem md:h-3rem md:w-3rem p-button-rounded p-button-danger"
+          styleClass="h-2rem w-2rem md:w-auto p-button-danger"
           icon="pi pi-plus"
-          [pTooltip]="'Adicionar saída'"
+          [pTooltip]="'Adicionar despesa'"
           (onClick)="addButton(registryCategoryEnum.Expense)"
         ></p-button>
         <p-button
+          [label]="columns.length != 2 ? 'Receita' : ''"
           *ngIf="registryCategory != 1"
-          styleClass="h-2rem w-2rem md:h-3rem md:w-3rem p-button-rounded p-button-success"
+          styleClass="h-2rem w-2rem md:w-auto p-button-success"
           icon="pi pi-plus"
-          [pTooltip]="'Adicionar entrada'"
+          [pTooltip]="'Adicionar receita'"
           (onClick)="addButton(registryCategoryEnum.Income)"
         ></p-button>
       </div>
@@ -87,7 +89,7 @@
 
   <ng-template pTemplate="emptymessage">
     <tr>
-      <td colspan="7" style="text-align: center;">{{emptyMessage}}</td>
+      <td colspan="7" style="text-align: center">{{ emptyMessage }}</td>
     </tr>
   </ng-template>
 </p-table>
