--- a/WebApp.Site/src/app/feature-components/table/table.component.css
+++ b/WebApp.Site/src/app/feature-components/table/table.component.css
@@ -3,15 +3,52 @@
 }
 
 :host ::ng-deep .p-calendar-w-btn .p-datepicker-trigger {
-  width: 3rem;
-}
-
-@media screen and (max-width: 768px) {
-  :host ::ng-deep .p-calendar-w-btn .p-datepicker-trigger {
-    width: 2rem;
-  }
+  width: 2rem;
 }
 
 :host ::ng-deep .p-datatable .p-datatable-thead > tr > th {
   padding: 0.5rem 1rem;
+}
+
+:host ::ng-deep .add-button {
+  height: 2rem !important;
+}
+
+:host ::ng-deep .input-calendar {
+  height: 2rem !important;
+}
+
+:host ::ng-deep .p-datatable .p-datatable-tbody > tr > td:first-child {
+  height: 2.5rem;
+  border-left: 2px solid gray;
+}
+
+@media screen and (max-width: 767px) {
+  :host ::ng-deep .add-button {
+    width: 2rem !important;
+  }
+}
+
+.actions-btn-row {
+  display: inline-block;
+  text-decoration: none;
+  color: #0077ff;
+  transition: color 0.3s ease;
+}
+
+.actions-btn-row:hover {
+  color: rgba(100, 158, 221, 0.7);
+  cursor: pointer;
+}
+
+.actions-btn-row i {
+  margin-right: 15px;
+}
+
+:host ::ng-deep .p-tag {
+  height: 1.5rem !important;
+}
+
+:host ::ng-deep span.p-tag-value {
+  font-size: 0.8rem !important;
 }
